--- a/index.tex
+++ b/index.tex
@@ -91,7 +91,7 @@ Roel J. Wieranga derives guidelines specifically for software engineering resear
 Hasselbring et al. \cite{2019arXiv190805986H} transfer these general applicable guidelines to the field of computer science research and formulate domain specific recommendations. Their key point is the request for treating software artifacts produced during a research project with the same level of care as the project report itself. Platforms like Zenodo\footnote{\url{https://zenodo.org}} in conjunction with GitHub\footnote{\url{https://github.com}} allow to reference, archive and later retrieve associated software artifacts for example.
 
 \subsection{Modern JavaScript Grammar}
-We will use a modern JavaScript dialect (ECMAScript 2017\footnote{\url{https://www.ecma-international.org/ecma-262/8.0/}}) for all code listings exclusively. We do not expect our readers to be fluent in this language and therefor provide a quick overview of the most important language features they will encounter in this paper in Appendix \ref{sec:modern-javascript-grammar}.
+We will use a modern JavaScript dialect (ECMAScript 2017\footnote{\url{https://www.ecma-international.org/ecma-262/8.0/}}) for all code listings exclusively. We do not expect our readers to be fluent in this language and therefore provide a quick overview of the most important language features they will encounter in this paper in Appendix \ref{sec:modern-javascript-grammar}.
 
 \subsection{Reactive Programming}
 RP is a declarative programming paradigm. In contrary to imperative programming, declarative code describes \emph{what} should be achieved rather than \emph{how} the process leading to that result looks like. With RP, we describe values, their transformation over time and how they depend on each other \cite{8354906}. A runtime system propagates changed values to their relevant dependencies, execute declared computations and ensures always a consistent state.
@@ -191,7 +191,7 @@ The experiment was followed by another survey consisting of four quantitative an
 
 It is crucible for later revalidation of the presented results to reproduce the described study setup. The questions used in the afterwards survey are available in Section 5.2 of the report. Unfortunately code examples from the experiment, questions used in the preparation survey nor the survey software itself are provided.
 
-The paper does not give any explicit indication of the application of concepts and approaches defined by design science. Hence if we understand the  study at hand as the next, refined iteration of the preceding work by Salvaneschi et al. \cite{Salvaneschi:2014:ESP:2635868.2635895}, we could deduce the application of such principles on a higher level.
+The paper does not give any explicit indication of the application of concepts and approaches known from design science. Since this is not the first study in the field of RP by Salvaneschi et al. (i.e. preceding work \cite{Salvaneschi:2014:ESP:2635868.2635895}), we could assume that such concepts were applied on a \emph{higher} planning level to iterate on previous results. We cannot proof this because of the mentioned lack of concrete evidence though.
 
 The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point hard if not impossible in case it cannot be retrieved at all.
 
